@@ -6,6 +6,7 @@
 -revise with absolute import statements.
 -revise module structure.
 -update for python 2/3 compatibility.
+-add touch event support when using Pyjsdl.
 
 0.87    2015-04-12
 -update Text.tprint to use rendered character cache.
